old_calci_done/y.output
Grammar

    0 $accept: stat $end

    1 stat: expr '\n'

    2 expr: expr '+' term
    3     | expr '-' term
    4     | term

    5 term: term '*' factor
    6     | term '/' factor
    7     | factor

    8 factor: NUMBER


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1
    '*' (42) 5
    '+' (43) 2
    '-' (45) 3
    '/' (47) 6
    error (256)
    NUMBER (258) 8


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    stat (10)
        on left: 1
        on right: 0
    expr (11)
        on left: 2 3 4
        on right: 1 2 3
    term (12)
        on left: 5 6 7
        on right: 2 3 4 5 6
    factor (13)
        on left: 8
        on right: 5 6 7


State 0

    0 $accept: . stat $end

    NUMBER  shift, and go to state 1

    stat    go to state 2
    expr    go to state 3
    term    go to state 4
    factor  go to state 5


State 1

    8 factor: NUMBER .

    $default  reduce using rule 8 (factor)


State 2

    0 $accept: stat . $end

    $end  shift, and go to state 6


State 3

    1 stat: expr . '\n'
    2 expr: expr . '+' term
    3     | expr . '-' term

    '\n'  shift, and go to state 7
    '+'   shift, and go to state 8
    '-'   shift, and go to state 9


State 4

    4 expr: term .
    5 term: term . '*' factor
    6     | term . '/' factor

    '*'  shift, and go to state 10
    '/'  shift, and go to state 11

    $default  reduce using rule 4 (expr)


State 5

    7 term: factor .

    $default  reduce using rule 7 (term)


State 6

    0 $accept: stat $end .

    $default  accept


State 7

    1 stat: expr '\n' .

    $default  reduce using rule 1 (stat)


State 8

    2 expr: expr '+' . term

    NUMBER  shift, and go to state 1

    term    go to state 12
    factor  go to state 5


State 9

    3 expr: expr '-' . term

    NUMBER  shift, and go to state 1

    term    go to state 13
    factor  go to state 5


State 10

    5 term: term '*' . factor

    NUMBER  shift, and go to state 1

    factor  go to state 14


State 11

    6 term: term '/' . factor

    NUMBER  shift, and go to state 1

    factor  go to state 15


State 12

    2 expr: expr '+' term .
    5 term: term . '*' factor
    6     | term . '/' factor

    '*'  shift, and go to state 10
    '/'  shift, and go to state 11

    $default  reduce using rule 2 (expr)


State 13

    3 expr: expr '-' term .
    5 term: term . '*' factor
    6     | term . '/' factor

    '*'  shift, and go to state 10
    '/'  shift, and go to state 11

    $default  reduce using rule 3 (expr)


State 14

    5 term: term '*' factor .

    $default  reduce using rule 5 (term)


State 15

    6 term: term '/' factor .

    $default  reduce using rule 6 (term)
